# Site_selection_engine

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.streamlit/: config.toml  secrets.toml.example
app/: streamlit_app.py
data/processed/: lookalike_v2.joblib  lookalike_v2_ranking.parquet  lookalike_v3.joblib  lookalike_v3_ranking.parquet  lookalike_v4.joblib  lookalike_v4_ranking.parquet  mcda_ranking.parquet
data/raw/: pois_competidores.geojson  pois_complementarios.geojson  pois_d1.geojson
docs/: despliegue.md  features_summary.md  metodologia.md  seleccion_area_estudio.md  v1_mcda_resultados.md  v2_lookalike_resultados.md  v3_spatial_cv_resultados.md  v4_demografia_resultados.md
src/: config.py  data_availability_check.py  db.py  download.py  features.py  grid.py  load_censo.py  logging_config.py  mcda.py  metrics.py
src/api/: __init__.py  main.py  schemas.py  service.py
src/data/: db.py  download.py  features.py  grid.py  load_censo.py  load_estrato.py
src/models/: lookalike.py  lookalike_v3.py  lookalike_v4.py  mcda.py  spatial_cv.py
src/selection/: data_availability_check.py
